fix font and scroll display on Firefox

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -186,12 +186,15 @@ button
 	max-width: 100%;
 	max-height: 26em;
 	flex-grow: 2;
+	-ms-overflow-style: none; /* IE 11 */
+	scrollbar-width: none;
 }
 
 .code-block > p, 
 .code-block > p > span
 {
 	font-family: var(--monospace);
+	font-weight: normal;
 }
 
 .code-output
@@ -205,6 +208,7 @@ button
 .code-output > p
 {
 	font-family: var(--monospace);
+	font-weight: normal;
 }
 
 .code-output p::before
